# rest-client

./: CMakeLists.txt  PkgConfig.pc.in  README.md  compile.sh
dependencies/: CMakeLists.txt
dependencies/curl/: curl.cmake
docs/: USER-GUIDE.md
src/rest-client/: rest_client.cc  rest_client.hh
test/integration/cmake-package/: README.md
test/integration/cmake-package/test-project/src/: test_project.cc
test/integration/system/: README.md
tests/basic/: CMakeLists.txt  basic_test.cc
tests/integration/cmake-package/test-project/: CMakeLists.txt
tests/integration/system/: Makefile  use_rest_client_from_system.cc
